<resources>
    <string name="app_name" translatable="false">Demo</string>
    <string name="msg_nodata">Sorry, No Data Found</string>
    <string name="label_title">NY Times Most Popular</string>
    <string name="label_splash_title">New York Times</string>
    <string name="msg_no_internet">Sorry, No Connection Available</string>
    <string name="label_search">Search</string>
    <string name="label_option">Options</string>
    <string name="label_about">About</string>
    <string name="label_details">Article Details</string>
    <string name="label_type">Article Type</string>
    <string name="label_short_desc">Short Description</string>
    <string name="label_tagby">Tagged By</string>
    <string name="label_section">Section</string>
    <string name="label_date">Date</string>
    <string name="label_desc">Description</string>
    <string name="msg_found_data">Data Displayed</string>
</resources>
