<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="model"
            type="com.dinesh.kotlinstructure.models.ResultModel" />
    </data>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tilTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                app:hintTextAppearance="@style/TextAppearance.AppCompat.Large">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:hint="Title"
                    android:padding="@dimen/_10sdp"
                    android:text="@{model.title}"
                    android:textColor="@color/cl_gray_text"
                    android:textSize="@dimen/_14sdp"
                    android:textStyle="bold"
                    android:transitionName="title" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tilDesc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                app:hintTextAppearance="@style/TextAppearance.AppCompat.Large">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:hint="@string/label_desc"
                    android:padding="@dimen/_10sdp"
                    android:text="@{model.abstract}"
                    android:textColor="@color/cl_gray_text"
                    android:textSize="@dimen/_14sdp"
                    android:textStyle="bold" />
            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/_10sdp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".7"
                    android:text="@string/label_type"
                    android:textColor="@color/cl_gray"
                    android:textSize="@dimen/_14sdp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@{model.type}"
                    android:textColor="@color/cl_gray_text"
                    android:textSize="@dimen/_14sdp"
                    android:textStyle="bold"
                    android:transitionName="type" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/_10sdp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".7"
                    android:text="@string/label_tagby"
                    android:textColor="@color/cl_gray"
                    android:textSize="@dimen/_14sdp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@{model.byline}"
                    android:textColor="@color/cl_gray_text"
                    android:textSize="@dimen/_14sdp"
                    android:textStyle="bold" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/_10sdp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".7"
                    android:text="@string/label_section"
                    android:textColor="@color/cl_gray"
                    android:textSize="@dimen/_14sdp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@{model.section}"
                    android:textColor="@color/cl_gray_text"
                    android:textSize="@dimen/_14sdp"
                    android:textStyle="bold" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/_10sdp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".7"
                    android:text="@string/label_date"
                    android:textColor="@color/cl_gray"
                    android:textSize="@dimen/_14sdp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@{model.publishedDate}"
                    android:textColor="@color/cl_gray_text"
                    android:textSize="@dimen/_14sdp"
                    android:textStyle="bold" />

            </LinearLayout>

            <ImageView
                android:id="@+id/ivImage"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_200sdp"
                android:layout_margin="@dimen/_10sdp"
                android:background="@color/cl_gray"
                android:scaleType="fitCenter" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autoLink="web"
                android:clickable="true"
                android:padding="@dimen/_10sdp"
                android:text="@{model.media[0].caption}"
                android:textColor="@color/cl_gray_text"
                android:textSize="@dimen/_14sdp"
                android:textStyle="bold" />


        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>
</layout>